--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
     "next": "^13.4.12",
+    "pg-pool": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
+    "@types/pg": "^8.10.2",
+    "pg": "^8.11.1",
     "sass": "^1.64.1"
   }
 }
