--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
     "next": "^13.4.12",
